[package]
name = "axum-json-rpc"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["http", "web", "axum", "jrpc", "json-rpc"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "A JSON-RPC extractor for Axum"
homepage = "https://github.com/ralexstokes/axum-json-rpc"
repository = "https://github.com/ralexstokes/axum-json-rpc"
readme = "README.md"

[dependencies]
async-trait = "0.1.53"
axum = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"

[dev-dependencies]
tracing = "0.1"
anyhow = "1.0.57"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.30"